Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object.html
@@ -35,7 +35,7 @@
       function recursive(parent, data) {
         if (Object.entries(data)) {
           Object.entries(data).forEach(function ([key, value]) {
-            console.log(value);
+            console.log(key, value);
             recursive(parent, value);
           });
         }
