Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object.html
@@ -38,6 +38,11 @@
             const li = document.createElement("li");
             li.append(key);
             ul.append(li);
+            if (Object.entries(value).length) {
+              const ul = document.createElement("ul");
+              recursive(ul, value);
+              li.append(ul);
+            }
           });
         }
       }
