Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
@@ -21,6 +21,14 @@
           },
         },
       };
+
+      const container = document.querySelector("div");
+
+      function createTree(container, obj) {
+        container.append(createTreeDom(obj));
+      }
+
+      function createTreeDom(obj) {}
     </script>
   </body>
 </html>
