Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
@@ -24,11 +24,15 @@
 
       const container = document.querySelector("div");
 
+      createTree(container, data);
+
       function createTree(container, obj) {
         container.append(createTreeDom(obj));
       }
 
-      function createTreeDom(obj) {}
+      function createTreeDom(obj) {
+        return "Hello World";
+      }
     </script>
   </body>
 </html>
