Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
@@ -31,6 +31,11 @@
       }
 
       function createTreeDom(obj) {
+        if (!Object.entries(obj).length) return;
+        const ul = document.createElement("ul");
+        for (const key in obj) {
+          console.log(key);
+        }
         return "Hello World";
       }
     </script>
