Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-2.html
@@ -36,8 +36,13 @@
         for (const key in obj) {
           const li = document.createElement("li");
           li.append(key);
+
+          const children = createTreeDom(obj[key]);
+          if (children) {
+            li.append(children);
+          }
+
           ul.append(li);
-          console.log(key);
         }
         return ul;
       }
