Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-3.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div id="container"></div>
+
     <script>
+      const container = document.querySelector("#container");
+      console.log(container);
       console.log("ola");
     </script>
   </body>
