Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-3.html
@@ -30,7 +30,16 @@
       }
 
       function createTreeText(obj) {
-        return "Hello world";
+        let ul = "";
+        let lis = "";
+
+        for (const key in obj) {
+          lis += "<li>" + key + "</li>\n";
+        }
+
+        ul = "<ul>\n" + lis + "</ul>";
+        console.log(ul);
+        return ul;
       }
     </script>
   </body>
