--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-3.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-tree-from-the-object-3.html
@@ -30,15 +30,14 @@
       }
 
       function createTreeText(obj) {
+        if (!Object.entries(obj).length) return "";
         let ul = "";
         let lis = "";
 
         for (const key in obj) {
-          lis += "<li>" + key + "</li>\n";
+          lis += "<li>" + key + createTreeText(obj[key]) + "</li>\n";
         }
-
         ul = "<ul>\n" + lis + "</ul>";
-        console.log(ul);
         return ul;
       }
     </script>
