Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/show-descendants-in-a-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/show-descendants-in-a-tree.html
@@ -43,5 +43,13 @@
         </ul>
       </li>
     </ul>
+
+    <script>
+      for (const li of document.querySelectorAll("li")) {
+        const content = li.firstChild.data.trim();
+
+        console.log(content);
+      }
+    </script>
   </body>
 </html>
