Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/show-descendants-in-a-tree.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/show-descendants-in-a-tree.html
@@ -46,11 +46,10 @@
 
     <script>
       for (const li of document.querySelectorAll("li")) {
-        const content = li.firstChild.data.trim();
         const descendants = li.querySelectorAll("li").length;
 
         if (descendants) {
-          li.firstChild.textContent = content + " [" + descendants + "]";
+          li.firstChild.data += " [" + descendants + "]";
         }
       }
     </script>
