--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-calendar.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-calendar.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      table {
+        border-collapse: collapse;
+      }
+
+      td,
+      th {
+        border: 1px solid black;
+        padding: 3px;
+        text-align: center;
+      }
+
+      th {
+        font-weight: bold;
+        background-color: #e6e6e6;
+      }
+    </style>
+  </head>
   <body>
     <div id="calendar"></div>
 
