Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-calendar.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-calendar.html
@@ -25,6 +25,8 @@
     <script>
       const calendar = document.querySelector("#calendar");
 
+      createCalendar(calendar, 2023, 5);
+
       function createCalendar(elem, year, month) {}
     </script>
   </body>
