Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-calendar.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-calendar.html
@@ -32,7 +32,7 @@
 
         while (date.getMonth() === month - 1) {
           console.log(date.getDate());
-          date.setDate(date.getDate + 1);
+          date.setDate(date.getDate() + 1);
         }
       }
     </script>
