--- a/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
@@ -37,7 +37,23 @@
     />
 
     <script>
-      console.log("log");
+      function clockStart() {
+        const date = new Date();
+        const hours =
+          date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
+
+        const minutes =
+          date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
+
+        const seconds =
+          date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
+
+        console.log(hours, minutes, seconds);
+      }
+
+      function clockStop() {
+        console.log("Stop");
+      }
     </script>
   </body>
 </html>
