Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
@@ -54,7 +54,7 @@
       }
 
       function clockStop() {
-        console.log("Stop");
+        console.log("Stop::");
       }
     </script>
   </body>
