--- a/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
@@ -16,11 +16,11 @@
     </style>
   </head>
   <body>
-    <p>
+    <div>
       <span id="hours">hh</span>:<span id="minutes">mm</span>:<span id="seconds"
         >ss</span
       >
-    </p>
+    </div>
 
     <!-- click on this button calls clockStart() -->
     <input
@@ -53,7 +53,9 @@
               ? "0" + date.getSeconds()
               : date.getSeconds();
 
-          intervalId = console.log(hours, minutes, seconds);
+          document.querySelector("#hours").innerHTML = hours;
+          document.querySelector("#minutes").innerHTML = minutes;
+          document.querySelector("#seconds").innerHTML = seconds;
         }, 1000);
       }
 
