--- a/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
@@ -40,6 +40,7 @@
       let timerId;
 
       function clockStart() {
+        update();
         if (!timerId) {
           timerId = setInterval(update, 1000);
         }
