Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/colored-clock-with-set-interval.html
@@ -50,22 +50,19 @@
         const date = new Date();
         const hours =
           date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
-
         const minutes =
           date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
-
         const seconds =
           date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
 
         document.querySelector("#hours").innerHTML = hours;
         document.querySelector("#minutes").innerHTML = minutes;
         document.querySelector("#seconds").innerHTML = seconds;
-
-        console.log(seconds);
       }
 
       function clockStop() {
-        console.log("Stop::");
+        clearInterval(timerId);
+        timerId = null;
       }
     </script>
   </body>
