Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/insert-the-html-in-the-list.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/insert-the-html-in-the-list.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <ul>
+      <li id="one">1</li>
+      <li id="two">4</li>
+    </ul>
+
     <script>
       console.log("ola");
     </script>
