Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/insert-the-html-in-the-list.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/insert-the-html-in-the-list.html
@@ -7,7 +7,9 @@
     </ul>
 
     <script>
-      console.log("ola");
+      document
+        .querySelector("#one")
+        .insertAdjacentHTML("afterend", "<li>2</li><li>3</li>");
     </script>
   </body>
 </html>
