Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/sort-the-table.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/sort-the-table.html
@@ -32,5 +32,11 @@
         </tr>
       </tbody>
     </table>
+
+    <script>
+      const table = document.querySelector("#table");
+      const tBody = table.querySelector("tbody");
+      console.log(tBody);
+    </script>
   </body>
 </html>
