Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/sort-the-table.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/sort-the-table.html
@@ -36,7 +36,9 @@
     <script>
       const table = document.querySelector("#table");
       const tBody = table.querySelector("tbody");
-      console.log(tBody);
+      const rows = tBody.querySelectorAll("tr");
+
+      console.log(rows);
     </script>
   </body>
 </html>
