Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -16,7 +16,7 @@
     <script>
       function countRabbits() {
         for (let i = 0; i <= 3; i++) {
-          console.log("Rabbit number " + i);
+          alert("Rabbit number " + i);
         }
       }
     </script>
