Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -19,7 +19,18 @@
       value="Say Thank you"
     />
 
+    <input
+      type="button"
+      value="After OR before"
+      id="button2"
+      onclick="console.log('Before')"
+    />
+
     <script>
+      document.querySelector("#button2").onclick = function () {
+        console.log("After");
+      };
+
       document.querySelector("#button1").onclick = function () {
         console.log("Thank you!");
       };
