Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -27,9 +27,11 @@
     />
 
     <script>
-      document.querySelector("#button2").onclick = function () {
-        console.log("After");
-      };
+      document.querySelector("#button2").onclick = null;
+
+      // document.querySelector("#button2").onclick = function () {
+      //   console.log("After");
+      // };
 
       document.querySelector("#button1").onclick = function () {
         console.log("Thank you!");
