Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -26,6 +26,13 @@
       onclick="console.log('Before')"
     />
 
+    <button
+      type="button"
+      onclick="console.log(this.innerHTML)"
+    >
+      Show innerHTML
+    </button>
+
     <script>
       document.querySelector("#button2").onclick = null;
 
