--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -28,7 +28,7 @@
 
     <button
       type="button"
-      onclick="console.log(this.innerHTML)"
+      onclick="alert(this.innerHTML)"
     >
       Show innerHTML
     </button>
