Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -39,7 +39,18 @@
       id="button3"
     />
 
+    <input
+      type="button"
+      value="Using setAttribute"
+      id="button4"
+    />
+
     <script>
+      // This won't work!!
+      document.querySelector("#button4").setAttribute("onclick", function () {
+        console.log("Wau");
+      });
+
       function sayThanks() {
         alert("Thanks");
       }
