Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -52,6 +52,14 @@
     />
 
     <script>
+      document.querySelector("#button5").onclick = function () {
+        console.log(1);
+      };
+
+      document.querySelector("#button5").onclick = function () {
+        console.log(2);
+      };
+
       // This won't work!!
       document.querySelector("#button4").setAttribute("onclick", function () {
         console.log("Wau");
