Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -75,6 +75,12 @@
       id="button9"
     />
 
+    <input
+      type="button"
+      value="From HTML attribute"
+      onclick="console.log(event)"
+    />
+
     <script>
       // document
       //   .querySelector("#button9")
