Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -82,7 +82,20 @@
       onclick="console.log(event)"
     />
 
+    <input
+      type="button"
+      value="Object handler"
+      id="button10"
+    />
+
     <script>
+      const obj = {
+        handleEvent(e) {
+          console.log(e.target);
+        },
+      };
+
+      document.querySelector("#button10").addEventListener("click", obj);
       // document
       //   .querySelector("#button9")
       //   .addEventListener("click", function (e) {
