Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -91,7 +91,7 @@
     <script>
       const obj = {
         handleEvent(e) {
-          console.log(e.target);
+          console.log(e.type);
         },
       };
 
